# freshMCP

./: .env.example  README.md  azure.yaml  policy.xml  pyproject.toml  requirements.txt  setup.py
infra/: main.bicep
src/: __init__.py
src/cosmos/apim-api/: api.bicep  openapi.json  policy.xml
src/cosmos/mcp/: Dockerfile  cosmos.py  server.py  tools.py
src/cosmos/server/: Dockerfile  cosmos.py  server.py  tools.py
src/search/apim-api/: api.bicep  openapi.json
src/search/mcp/: Dockerfile  search.py  server.py  tools.py
src/search/server/: Dockerfile  search.py  server.py
